react-gke/k8s/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: react-gke
  labels:
    name: react-gke
